results/SVCOMP/specgen/log-instanceof1-2024_02_27_16_07_21.txt
class Main {
  //@ requires args != null;
  //@ ensures \result == (args instanceof Object);
  public static boolean f() {
    return args instanceof Object;
  }
}
/home/max/Documents/JMLGPT/tmp/instanceof1.java:2: error: cannot find symbol
  //@ requires args != null;
               ^
  symbol:   variable args
  location: class Main
/home/max/Documents/JMLGPT/tmp/instanceof1.java:3: error: cannot find symbol
  //@ ensures \result == (args instanceof Object);
                          ^
  symbol:   variable args
  location: class Main
/home/max/Documents/JMLGPT/tmp/instanceof1.java:5: error: cannot find symbol
    return args instanceof Object;
           ^
  symbol:   variable args
  location: class Main
3 errors

/*
 * Origin of the benchmark:
 *     license: 4-clause BSD (see /java/jbmc-regression/LICENSE)
 *     repo: https://github.com/diffblue/cbmc.git
 *     branch: develop
 *     directory: regression/cbmc-java/instanceof1
 * The benchmark was taken from the repo: 24 January 2018
 */
class Main {
  //@ ensures \result == (args instanceof Object);
  public static boolean f() {
    return args instanceof Object;
  }
}
/home/max/Documents/JMLGPT/tmp/instanceof1.java:10: error: cannot find symbol
  //@ ensures \result == (args instanceof Object);
                          ^
  symbol:   variable args
  location: class Main
/home/max/Documents/JMLGPT/tmp/instanceof1.java:12: error: cannot find symbol
    return args instanceof Object;
           ^
  symbol:   variable args
  location: class Main
2 errors

/*
 * Origin of the benchmark:
 *     license: 4-clause BSD (see /java/jbmc-regression/LICENSE)
 *     repo: https://github.com/diffblue/cbmc.git
 *     branch: develop
 *     directory: regression/cbmc-java/instanceof1
 * The benchmark was taken from the repo: 24 January 2018
 */
class Main {
  //@ ensures \result == false; // cannot determine instanceof for a non-object
  public static boolean f() {
    return args instanceof Object;
  }
}
/home/max/Documents/JMLGPT/tmp/instanceof1.java:12: error: cannot find symbol
    return args instanceof Object;
           ^
  symbol:   variable args
  location: class Main
1 error

/*
 * Origin of the benchmark:
 *     license: 4-clause BSD (see /java/jbmc-regression/LICENSE)
 *     repo: https://github.com/diffblue/cbmc.git
 *     branch: develop
 *     directory: regression/cbmc-java/instanceof1
 * The benchmark was taken from the repo: 24 January 2018
 */
class Main {
  //@ ensures \result == false; // cannot determine instanceof for a non-object
  public static boolean f() {
    return false;
  }
}

